--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
-    "@nivo/bar": "^0.72.0",
-    "@nivo/core": "^0.72.0",
-    "@nivo/line": "^0.72.0",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
     "@reach/accordion": "^0.15.1",
     "@reach/dialog": "^0.15.0",
     "@reach/listbox": "^0.15.0",
@@ -68,5 +68,9 @@
   },
   "devDependencies": {
     "babel-plugin-react-require": "^3.1.3"
+  },
+  "overrides": {
+    "d3-color":"3.1.0",
+    "nth-check":"2.1.1"
   }
 }
